fix(dark mode): make a focused text only button actually readable
Resolves https://github.com/go-vikunja/api/issues/41

--- a/src/styles/custom-properties/colors.scss
+++ b/src/styles/custom-properties/colors.scss
@@ -291,9 +291,11 @@
       --table-row-hover-background-color: var(--grey-100);
       --dropdown-item-hover-background-color: var(--grey-100);
       --dropdown-item-hover-color: var(--text);
+      --pre-background: var(--grey-200);
       --button-text-hover-background-color: var(--grey-200);
       --button-hover-color: var(--grey-600);
-      --pre-background: var(--grey-200);
+      --button-active-color: var(--grey-600);
+      --button-focus-color: var(--grey-600);
 
       // Custom color variables we need to override
       --card-border-color: hsla(var(--grey-100-hsl), 0.3);
